--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,20 @@
 {
+  "root": true,
   "env": { "browser": true, "es2020": true },
-  "extends": ["eslint:recommended"],
-  "parserOptions": { "ecmaVersion": "latest", "sourceType": "module" },
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react-hooks/recommended"
+  ],
+  "ignorePatterns": ["dist", ".eslintrc.json"],
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["react-refresh"],
   "rules": {
-    "no-unused-vars": "warn",
-    "no-console": "warn"
+    "react-refresh/only-export-components": [
+      "warn",
+      { "allowConstantExport": true }
+    ],
+    "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/no-unused-vars": "warn"
   }
 }
